user profile updated with register to logout

--- a/config/config.env
+++ b/config/config.env
@@ -21,11 +21,11 @@ JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
 MAIL_TRAP_HOST=smtp.mailtrap.io
-MAIL_TRAP_PORT=2525
-MAIL_TRAP_USER=f79c5c94063698
-MAIL_TRAP_PASSWORD=235a2c29994117
+MAIL_TRAP_PORT=25 || 465 || 587 || 2525
+MAIL_TRAP_USER=3006fc5173a5dc
+MAIL_TRAP_PASSWORD=18849c40ab1276
 MAIL_TRAP_EMAIL_FROM=noreply@devcamp.com
-MAIL_TRAP_EMAIL_FROM_NAME=devcamp
+MAIL_TRAP_EMAIL_FROM_NAME=Bootcamp
 
 WINDOWMS = 600000
 MAX_REQUEST = 100
